[project]
name = "celery-redis-plus"
version = "0.1.0a5"
description = "Enhanced Kombu Redis transport for Celery"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
keywords = ["celery", "redis", "message-queue", "priority-queue", "kombu"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Distributed Computing",
]
dependencies = ["celery>=5.5.0", "kombu>=5.5.0", "redis>=7.1.0"]

[project.entry-points."kombu.transport"]
"redis+celery-redis-plus" = "celery_redis_plus.transport:Transport"

[dependency-groups]
dev = [
  "celery-types==0.24.0",
  "pre-commit==4.5.1",
  "pytest==9.0.2",
  "pytest-cov==7.0.0",
  "pytest-xdist>=3.8.0",
  "ruff==0.14.10",
  "testcontainers[redis]==4.13.3",
  "ty==0.0.8",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
explicit-preview-rules = true
fixable = ["ALL"]
ignore = [
  # Type annotations - Any needed for untyped Celery/Kombu APIs
  "ANN401",

  # Unused arguments - signal handlers and overrides have required signatures
  "ARG001",
  "ARG002",

  # Complexity - some functions are inherently complex
  "C901",

  # Conflicts with ruff-format
  "COM812",

  # Docstring rules are too extensive
  "D",

  # Line length - 120 char limit is sufficient
  "E5",

  # Exception message patterns - extracting to variables hurts readability
  "EM101",
  "EM102",

  # Formula comments are documentation, not dead code
  "ERA001",

  # We use current Python version annotations
  "FA",

  # Boolean traps - too many violations, breaks compatibility
  "FBT001",
  "FBT002",

  # Naming follows kombu conventions
  "N802",
  "N806",

  # Lazy imports for optional dependencies
  "PLC0415",

  # Pylint refactor rules
  "PLR0913", # Too many arguments - test fixtures
  "PLR1704", # Redefining argument in context manager
  "PLR2004", # Magic values in tests are fine

  # namedtuple usage follows kombu patterns
  "PYI024",

  # Empty() parentheses are clearer
  "RSE102",

  # Ruff-specific
  "RUF005", # Tuple concatenation is clearer
  "RUF012", # False positives with class variables
  "RUF015", # Readability over micro-optimization
  "RUF059", # Keep unused variables explicit

  # assert needed for tests
  "S101",

  # Nested ifs and try/except/pass are clearer in some cases
  "SIM102",
  "SIM105",

  # Private member access needed for testing
  "SLF001",

  # Prefer explicit imports over TYPE_CHECKING blocks
  "TC003",

  # Long exception messages are fine
  "TRY003",
]
preview = true
select = ["ALL", "UP045"]
unfixable = []

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "unit: marks tests as unit tests",
  "integration: marks tests as integration tests",
]

[tool.coverage.run]
concurrency = ["thread"]
branch = true
source = ["celery_redis_plus"]
omit = ["*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
